storage/longhorn/longhorn-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingressroute
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.ltc.tsphotoclicks.net`)
      middlewares:
        - name: authentik-middleware
          namespace: authentik
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-internal-secret
